--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tik Tak Toe</title>
+    <title>Tic Tac Toe</title>
+    <link
+      rel="shortcut icon"
+      href="/public/assets/images/tic-tac-toe-icon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="root"></div>
